Update title and header text in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BINBUZZ PRO | Ultra Fast</title>
+    <title>BINBUZZ</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.2/papaparse.min.js"></script>
     <style>
         :root {
@@ -102,7 +102,7 @@
 <div id="topProgress"></div>
 
 <header class="header">
-    <h1>BINBUZZ <span style="color:var(--neon)"></span></h1>
+    <h1>BINBUZZ<span style="color:var(--neon)"></span></h1>
     <div class="status-panel">
         <div id="fileInfo" class="badge">Scanning Files...</div>
         <div id="dataInfo" class="badge">Data: 0</div>
