--- a/Pro.html
+++ b/Pro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BINBUZZ PRO</title>
+    <title>BINBUZZ PRO </title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.2/papaparse.min.js"></script>
     <style>
         :root {
@@ -166,7 +166,7 @@
 </div>
 
 <footer>
-    <p>BINBUZZ © Humayun Shariar Himu </p>
+    <p>BINBUZZ Pro© Humayun Shariar Himu </p>
 </footer>
 
 <script>
