Add promotion for BINBUZZ Pro in index.html
Added a paragraph promoting the reliable version of BINBUZZ Pro with a download link.

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
         <div id="fileInfo" class="badge">Scanning Files...</div>
         <div id="dataInfo" class="badge">Data: 0</div>
     </div>
+    <p> Much Reliable Version of BINBUZZ Pro : Download & Deploy on Localhot <a href="hhttps://github.com/HumayunShariarHimu/BINBUZZ/blob/main/Script.zip">BINBUZZ Pro</a></p>
 </header>
 
 <div class="container">
